--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -6,41 +6,38 @@
 <PageTitle>Tracks</PageTitle>
 
 <MudContainer>
-    <MudTable Items="@TrackData" ReadOnly="@_readOnly" Bordered="true" Class="mt-2">
+    <MudDataGrid T="Track" Items="TrackData" Bordered="true" Class="my-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Tracks</MudText>
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Tertiary" OnClick="AddTrack">New</MudButton>
         </ToolBarContent>
-        <HeaderContent>
-            <MudTh>Name</MudTh>
-            <MudTh>Country</MudTh>
-            <MudTh>Length</MudTh>
-            <MudTh>Aero</MudTh>
-            <MudTh>Chassis</MudTh>
-            <MudTh>Powertrain</MudTh>
-            <MudTh>Qualifying</MudTh>
-            <MudTh>State</MudTh>
-            <MudTh></MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd>@context.Name</MudTd>
-            <MudTd>
-                <CountryFlag Code="@context.Country" Size="FlagSize.Small" IncludeName="true" />
-            </MudTd>
-            <MudTd>@(context.Length)x</MudTd>
-            <MudTd>@(context.AeroMod)x</MudTd>
-            <MudTd>@(context.ChassisMod)x</MudTd>
-            <MudTd>@(context.PowerMod)x</MudTd>
-            <MudTd>@(context.QualifyingMod)x</MudTd>
-            <MudTd>@context.State</MudTd>
-            <MudTd Class="d-flex justify-end">
-                <MudButtonGroup>
-                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context))" />
-                </MudButtonGroup>
-            </MudTd>
-        </RowTemplate>
-    </MudTable>
+        <Columns>
+            <HierarchyColumn T="Track" />
+            <PropertyColumn Property="e => e.Name" />
+            <PropertyColumn Property="e => e.Country" />
+            <PropertyColumn Property="e => e.Length" Title="Length (Km)" />
+            <TemplateColumn Title="Aero">
+                <CellTemplate>@(context.Item.AeroMod)x</CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn Title="Chassis">
+                <CellTemplate>@(context.Item.ChassisMod)x</CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn Title="Powertrain">
+                <CellTemplate>@(context.Item.PowerMod)x</CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn Title="Qualifying">
+                <CellTemplate>@(context.Item.QualifyingMod)x</CellTemplate>
+            </TemplateColumn>
+            <TemplateColumn Class="d-flex justify-end">
+                <CellTemplate>
+                    <MudButtonGroup>
+                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context.Item))" />
+                    </MudButtonGroup>
+                </CellTemplate>
+            </TemplateColumn>
+        </Columns>
+    </MudDataGrid>
 </MudContainer>
 
 @code {
@@ -71,4 +68,6 @@
             TrackData = await TrackService.GetTracks();
         }
     }
+
+    //async Task DeleteTrack() => await TrackService.De
 }
