--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -63,6 +63,12 @@ html, body {
     box-shadow: var(--mud-palette-secondary) 0 0 2em;
 }
 
+/* page specific stylings */
+.result-cell {
+    border: 0.5px solid black !important;
+    color: black !important;
+}
+
 /* default blazor css elements */
 #blazor-error-ui {
     background: lightyellow;
